--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
-requests=2.26.0
-pystac-client=0.3.1
-aiohttp=3.8.1
-python=3.9.7
+requests==2.26.0
+pystac-client==0.3.1
+aiohttp==3.8.1
+python==3.9.7
